Kubernetes/apps/radarr/service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-tailscale
  namespace: media
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "radarr"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7878
      targetPort: http
  selector:
    app: radarr
