Kubernetes/apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  ports:
    - name: http
      port: 7878
      targetPort: http
  selector:
    app: radarr
